<resources>
	<string name="app_name">NativeBOINC</string>
	<string name="app_desc">Native BOINC for Android with AndroBOINC</string>
	<string name="service_desc">Enables participating to BOINC projects on Android devices</string>
	<string name="install_service_desc">Native Client and BOINC application Installer service </string>
	<string name="nboinc_service_desc">Native BOINC client service</string>
	<string name="bugcatcher_service_desc">NativeBOINC BugCatcher service</string>
	<string name="newsHandlerDesc">News Handler</string>
	<string name="widget2x1">NativeBOINC small</string>
	<string name="widgetTablet">NativeBOINC large</string>
	<string name="autostartReceiver">Autostart receiver</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="finish">Finish</string>
	<string name="info">Info</string>
	<string name="authorization">Authorization&#8230;</string>
	<string name="cancel">Cancel</string>
	<string name="cancelAll">Cancel all</string>
	<string name="changelog">ChangeLog</string>
	<string name="close">Close</string>
	<string name="connecting">Connecting&#8230;</string>
	<string name="disabled">Disabled</string>
	<string name="dismiss">Dismiss</string>
	<string name="error">Error</string>
	<string name="homepage">Homepage</string>
	<string name="license">License</string>
	<string name="notConnected">Not connected</string>
	<string name="notice">Notice</string>
	<string name="clear">Clear</string>
	<string name="ok">OK</string>
	<string name="apply">Apply</string>
	<string name="projectSuspendedByUser">Project suspended by user</string>
	<string name="received">Received</string>
	<string name="retrievingData">Retrieving data&#8230;</string>
	<string name="retrievingInitialData">Retrieving initial data&#8230;</string>
	<string name="sent">Sent</string>
	<string name="shutdown">Shutdown</string>
	<string name="sources">Source Code</string>
	<string name="taskSuspendedByUser">Task suspended by user</string>
	<string name="unknown">unknown</string>
	<string name="upgradedTo">Upgraded to</string>
	<string name="warning">Warning</string>
	<string name="now">Now</string>
	<string name="battery">Battery</string>
	<string name="defaultText">Default</string>
	<string name="copy">Copy</string>
	<string name="saveToSDCard">Save to SDCard</string>
	<string name="restart">Restart</string>
	<string name="clientRestarting">Restarting native client&#8230;</string>
	<string name="selectAll">Select all</string>
	<string name="unselectAll">Unselect all</string>
	<string name="yesText">Yes</string>
	<string name="noText">No</string>
	<string name="orText">or</string>
	<string name="installedBinaries">Installed binaries</string>
	<string name="boincClient">BOINC client</string>
	<string name="boincHosts">Boinc hosts</string>
	<string name="unitKiB">KiB</string>
	<string name="unitMiB">MiB</string>
	<string name="unitGiB">GiB</string>
	<string name="unitB">B</string>
	<string name="unitKB">KB</string>
	<string name="unitMB">MB</string>
	<string name="unitGB">GB</string>
	<string name="unitBps">B/s</string>
	<string name="unitKBps">KB/s</string>
	<string name="unitMBps">MB/s</string>
	<string name="gflops">GFLOPS</string>
	<string name="temp_info">Press Menu button</string>
	<string name="projects">Projects</string>
	<string name="tasks">Tasks</string>
	<string name="transfers">Transfers</string>
	<string name="messages">Messages</string>
	<string name="notices">Notices</string>
	<string name="closeWarning">Press Back again (within 5 seconds) to exit</string>
	<string name="menuStartUp">Start up</string>
	<string name="menuShutdown">Shutdown</string>
	<string name="menuAbout">About</string>
	<string name="menuAddNewHost">Add new host</string>
	<string name="menuConnect">Connect</string>
	<string name="menuDisconnect">Disconnect</string>
	<string name="menuHosts">Manage hosts</string>
	<string name="menuHostInfo">Host Info</string>
	<string name="menuManage">Manage client</string>
	<string name="menuPreferences">Preferences</string>
	<string name="menuReconnect">Reconnect</string>
	<string name="menuRefresh">Refresh</string>
	<string name="menuNativeClient">Native client</string>
	<string name="aboutTitle">Basic Information</string>
	<string name="aboutHomepageUrl">http://nativeboinc.org/</string>
	<string name="aboutText">
		%1$s is fully fledged native BOINC client for Android integrated
		with AndroBOINC manager v1.6.7b3.\n
		Thank you for use my software.\n
		Copyright &#169; 2012 matszpk\n
		Original AndroBOINC by Pavel Michalec (Paulo M.)\n
		\n
		Thanks for:\n
		Troll81 - for logo design.\n
		BOINC@Poland - for support.\n
		Haer and eLPeCKo from CNT - czech translation.\n
		Daniel Winzen - german translation.\n
		Paolo (bax) - itialan translation.\n
		uno20001 - hungarian translation.\n
		Skwaloo - french translation.\n
	</string>
	<string name="prefCategoryUI">User Interface</string>
	<string name="prefScreenOrientation">Screen orientation</string>
	<string name="prefKeepScreenOn">Keep screen active</string>
	<string name="prefKeepScreenOnEnabled">Prevent screen from turning off</string>
	<string name="prefKeepScreenOnDisabled">Screen may turn off at user inactivity</string>
	<string name="prefAutoConnectTitle">Automatic connect</string>
	<string name="prefAutoConnectDisabled">No automatic connect on startup</string>
	<string name="prefAutoConnectEnabled">Connect to recently connected client on startup</string>
	<string name="prefCategoryNativeBoinc">Native BOINC client</string>
	<string name="prefPowerSaving">Power saving</string>
	<string name="prefPowerSavingOnDisabled">Prevent screen lock and CPU underclocking</string>
	<string name="prefPowerSavingOnEnabled">Allow screen lock and CPU underclocking</string>
	<string name="prefScreenLockUpdateInterval">Screen lock periodic refresh</string>
	<string name="prefScreenLockUpdateIntervalSummary">Screen lock refresh every</string>
	<string name="prefWidgetUpdateInterval">Widget periodic refresh</string>
	<string name="prefWidgetUpdateIntervalSummary">Widget refresh every</string>
	<string name="prefCategoryNetworkBW">Network Bandwidth</string>
	<string name="prefAutoUpdateIntervalWiFi">WiFi periodic refresh</string>
	<string name="prefAutoUpdateIntervalMobile">Mobile periodic refresh</string>
	<string name="prefAutoUpdateIntervalLocalhost">Localhost periodic refresh</string>
	<string name="prefAutoUpdateIntervalSummary">Automatic refresh every</string>
	<string name="prefLimitMessagesTitle">Limit number of messages</string>
	<string name="prefLimitMessagesDisabled">Retrieve all messages on connect (can transfer a lot of data)</string>
	<string name="prefLimitMessagesEnabled">Retrieve only 50 recent messages on connect (saves bandwidth)</string>
	<string name="prefNetworkUsageStats">Network usage</string>
	<string name="prefNetworkUsageDisabled">Statistics are NOT collected</string>
	<string name="prefNetworkUsageNull">Received: 0B, Sent: 0B</string>
	<string name="prefCategoryAbout">About</string>
	<string name="prefAboutTitle">About this application</string>
	<string name="prefChangelogSummary">History of changes</string>
	<string name="prefLicenseSummary">Text of license</string>
	<string name="nativeAutostart">Client starting</string>
	<string name="nativeAutostartTitle">Autostart client</string>
	<string name="newsAndUpdates">News and updates</string>
	<string name="nativeLatestNewsTitle">Latest news</string>
	<string name="nativeLatestNewsSummary">Displays latest news list</string>
	<string name="notifyNewsUpdatesTitle">Notify about news and new binaries</string>
	<string name="notifyNewsUpdatesSummaryOn">Notifications about news and new binaries every 6 hours enabled</string>
	<string name="notifyNewsUpdatesSummaryOff">Notifications about news and new binaries every 6 hours disabled</string>
	<string name="nativeBoincNetwork">Network options</string>
	<string name="nativeHostnameTitle">Set up hostname</string>
	<string name="nativeHostnameSummaryNone">Retrieved from network system</string>
	<string name="nativeRemoteAccessTitle">Allow remote access</string>
	<string name="nativeRemoteAccessSummaryOn">Allow remote access for other hosts</string>
	<string name="nativeRemoteAccessSummaryOff">Disallow remote access for other hosts</string>
	<string name="nativeAccessPasswordTitle">Access password</string>
	<string name="nativeAccessPasswordSummary">Change access password for client</string>
	<string name="nativeAccessListTitle">Access host list</string>
	<string name="nativeAccessListSummary">List of hosts whose have access to BOINC client</string>
	<string name="nativeBoincInstallation">Installation options</string>
	<string name="nativeMoveToIntMemTitle">Move to internal memory</string>
	<string name="nativeMoveToIntMemSummary">Move BOINC to internal memory</string>
	<string name="nativeInstalledBinariesTitle">Installed binaries</string>
	<string name="nativeInstalledBinariesSummary">List of installed binaries</string>
	<string name="nativeUpdateBinariesTitle">Update binaries</string>
	<string name="nativeUpdateBinariesSummary">Update client and apps binaries</string>
	<string name="nativeUpdateFromSDCardTitle">Update from SDCard</string>
	<string name="nativeUpdateFromSDCardSummary">Update client and project apps from SDCard</string>
	<string name="nativeReinstallTitle">Reinstall BOINC</string>
	<string name="nativeReinstallSummary">Make BOINC reinstallation</string>
	<string name="nativeDeleteProjectBinsTitle">Delete project binaries</string>
	<string name="nativeDeleteProjectBinsSummary">Deletes project binaries (from app_info.xml)</string>
	<string name="nativeBoincConfiguration">Configuration options</string>
	<string name="nativeApplyConfigFileTitle">Apply config file</string>
	<string name="nativeApplyConfigFileSummary">Apply/delete cc_config.xml file</string>
	<string name="nativeBoincDiagnostics">Diagnostics options</string>
	<string name="nativeBugCatcherTitle">BugCatcher mode</string>
	<string name="nativeBugCatcherSummary">Enable BugCatcher mode and display/send bugs</string>
	<string name="nativeDumpBoincDirTitle">Dump BOINC files</string>
	<string name="nativeDumpBoincDirSummary">Dump whole BOINC directory into SDCard</string>
	<string name="nativeShowLogsTitle">Show logs</string>
	<string name="nativeShowLogsSummary">Show last logs from BOINC client</string>
	<string name="editBAMName">User name</string>
	<string name="editBAMUrl">URL</string>
	<string name="editBAMPassword">Password</string>
	<string name="installWelcome">Welcome to NativeBOINC!</string>
	<string name="installClientInstall">Please tap \'Next\' button to to download and install native BOINC client.</string>
	<string name="versionToInstall">Version to install</string>
	<string name="installSuccessfully">Native BOINC client has been installed successfully!</string>
	<string name="installAddProject">Please tap \'Add  project\' button to add first BOINC project, or \'Synchronize BAM\' if you want to synchronize client with BAM.</string>
	<string name="installFinished">Installation has finished. Please tap \'Finish\' button.</string>
	<string name="installWidgetFinished">Hint: We recommends to use NativeBOINC widget to control native client.</string>
	<string name="installFinishedBenchmark">During installing first project, BOINC can run benchmark, which works by 30 seconds.</string>
	<string name="installReadBefore">READ BEFORE INSTALLATION:</string>
	<string name="installAttention2">If application closes unexpectedly, please use \'Force close\' and run again.
	    Application kills all clients at start up.</string>
	<string name="installAttention3">BOINC client will be working in background. Please use \'Shutdown\' option to shutdown client.</string>
	<string name="installNetworkAccess1">BOINC client allows to you connect with it through network with using BOINC Manager.</string>
	<string name="noInstallOpsText">No operations in background.</string>
</resources>