<?xml version="1.0" encoding="utf-8"?>
<!-- 
/* 
 * AndroBOINC - BOINC Manager for Android
 * Copyright (C) 2010, Pavol Michalec
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefCategoryUI">
		<ListPreference
			android:key="screenOrientation"
			android:title="@string/prefScreenOrientation"
			android:entryValues="@array/prefScreenOrientationValues"
			android:entries="@array/prefScreenOrientationDisplay"
			android:defaultValue="-1"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="lockScreenOn"
			android:title="@string/prefKeepScreenOn"
			android:summaryOff="@string/prefKeepScreenOnDisabled"
			android:summaryOn="@string/prefKeepScreenOnEnabled"
			android:defaultValue="false"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="autoConnect"
			android:title="@string/prefAutoConnectTitle"
			android:summaryOff="@string/prefAutoConnectDisabled"
			android:summaryOn="@string/prefAutoConnectEnabled"
			android:defaultValue="false"
			android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefCategoryNativeBoinc">
		<CheckBoxPreference 
			android:key="powerSaving"
			android:title="@string/prefPowerSaving"
			android:summaryOff="@string/prefPowerSavingOnDisabled"
			android:summaryOn="@string/prefPowerSavingOnEnabled"
			android:defaultValue="false"
			android:persistent="true" />
		<ListPreference 
			android:key="screenLockUpdateInterval"
			android:title="@string/prefScreenLockUpdateInterval"
			android:entries="@array/prefScreenLockUpdateDisplay"
			android:entryValues="@array/prefScreenLockUpdateValues"
			android:defaultValue="10"
			android:persistent="true" />
		<ListPreference 
			android:key="widgetUpdateInterval"
			android:title="@string/prefWidgetUpdateInterval"
			android:entries="@array/prefWidgetUpdateDisplay"
			android:entryValues="@array/prefWidgetUpdateValues"
			android:defaultValue="10"
			android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefCategoryNetworkBW">
		<ListPreference
			android:key="autoUpdateIntervalWiFi"
			android:title="@string/prefAutoUpdateIntervalWiFi"
			android:summary="@string/disabled"
			android:entryValues="@array/prefAutoUpdatesValues"
			android:entries="@array/prefAutoUpdatesDisplay"
			android:defaultValue="10"
			android:persistent="true" />
		<ListPreference
			android:key="autoUpdateIntervalMobile"
			android:title="@string/prefAutoUpdateIntervalMobile"
			android:summary="@string/disabled"
			android:entryValues="@array/prefAutoUpdatesValues"
			android:entries="@array/prefAutoUpdatesDisplay"
			android:defaultValue="10"
			android:persistent="true" />
		<ListPreference
			android:key="autoUpdateIntervalLocalhost"
			android:title="@string/prefAutoUpdateIntervalLocalhost"
			android:summary="@string/disabled"
			android:entryValues="@array/prefAutoUpdatesValues"
			android:entries="@array/prefAutoUpdatesDisplay"
			android:defaultValue="10"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="limitMessages"
			android:title="@string/prefLimitMessagesTitle"
			android:summaryOff="@string/prefLimitMessagesDisabled"
			android:summaryOn="@string/prefLimitMessagesEnabled"
			android:defaultValue="true"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="trackNetworkUsage"
			android:title="@string/prefNetworkUsageStats"
			android:summaryOff="@string/prefNetworkUsageDisabled"
			android:summaryOn="@string/prefNetworkUsageNull"
			android:defaultValue="false"
			android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefCategoryAbout">
	    <Preference
			android:key="news"
			android:title="@string/prefLatestNewsTitle"
			android:summary="@string/prefLatestNewsSummary"
			android:persistent="false" />
		<Preference
			android:key="aboutMe"
			android:title="@string/prefAboutTitle"
			android:persistent="false" />
		<Preference
			android:key="changeLog"
			android:title="@string/changelog"
			android:summary="@string/prefChangelogSummary"
			android:persistent="false" />
		<Preference
			android:key="license"
			android:title="@string/license"
			android:summary="@string/prefLicenseSummary"
			android:persistent="false" />
		
	</PreferenceCategory>
</PreferenceScreen>
