<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
 * NativeBOINC - Native BOINC Client with Manager
 * Copyright (C) 2011, Mateusz Szpakowski
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dip">
	<ScrollView
  		android:layout_width="fill_parent"
  		android:layout_height="0dip"
  		android:layout_weight="1">
  		<LinearLayout 
  			android:orientation="vertical"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content">
		  	<TextView
				android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textStyle="bold"
		  		android:paddingBottom="10dip"
		  		android:textAppearance="?android:attr/textAppearanceLarge"
		  		android:text="@string/installWelcome" />
		  	<TextView
				android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:text="@string/installClientInstall" />
		  	<RelativeLayout
		  		android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:paddingTop="10dip"
		  		android:paddingBottom="10dip">
			  	<TextView android:id="@+id/versionToInstall"
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content"
			  		android:textSize="@dimen/labelTextSize"
			  		android:layout_centerVertical="true"
			  		android:layout_alignParentTop="false"
			  		android:layout_alignParentRight="false"
			  		android:text="@string/versionToInstall" />
			  	<Button android:id="@+id/clientInfo"
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content"
			  		android:textSize="14dip"
			  		android:enabled="false"
			  		android:layout_alignParentTop="true"
			  		android:layout_alignParentRight="true"
			  		android:text="@string/info" />
		  	</RelativeLayout>
  		  	<TextView
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:textStyle="bold"
		  		android:text="@string/installReadBefore" />
		  	<TextView
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:text="@string/installAttention2" />
		  	<TextView
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:text="@string/installAttention3" />
	  	</LinearLayout>
	</ScrollView>
  	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:paddingTop="10dip">
		<Button android:id="@+id/installCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
		<Button android:id="@+id/installNext" 
		    android:enabled="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next" />
	</LinearLayout>
</LinearLayout>
