<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
 * NativeBOINC - Native BOINC Client with Manager
 * Copyright (C) 2011, Mateusz Szpakowski
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 */
 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip">
    <TextView
		android:id="@+id/installFinishText"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="14dip"
  		android:text="@string/installFinished" />
  	<TextView
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="14dip"
  		android:paddingTop="10dip"
  		android:text="@string/installWidgetFinished" />
  	<TextView
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="14dip"
  		android:paddingTop="10dip"
  		android:text="@string/installFinishedBenchmark" />
  	<Button android:id="@+id/installFinish"
		android:enabled="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:text="@string/finish" />
</LinearLayout>
